--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width,user-scalable=no,minimum-scale=1.0, maximum-scale=1.0, user-scalable=no,initial-scale=1"/>
     <meta name="Liudq" content="Administrator"/>
     <link rel="stylesheet" href="/src/Util/base.css">
+    <link rel="stylesheet" href="/src/Util/huipayWaterBase.css">
     <link rel="stylesheet" href="http://cache.amap.com/lbs/static/main1119.css"/>
     <script type="text/javascript"
             src="http://webapi.amap.com/maps?v=1.3&key=e8d39840feea3f0643cab8eba29db9b3&plugin=AMap.Geocoder,AMap.Autocomplete,AMap.PlaceSearch"></script>
