--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="viewport" content="width=device-width,user-scalable=no,minimum-scale=1.0, maximum-scale=1.0, user-scalable=no,initial-scale=1"/>
     <meta name="Liudq" content="Administrator"/>
+    <meta name="apple-mobile-web-app-capable" content="yes"/>
     <link rel="stylesheet" href="/src/Util/base.css">
     <link rel="stylesheet" href="/src/Util/huipayWaterBase.css">
     <link rel="stylesheet" href="http://cache.amap.com/lbs/static/main1119.css"/>
