--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="http://cache.amap.com/lbs/static/main1119.css"/>
     <script type="text/javascript"
             src="http://webapi.amap.com/maps?v=1.3&key=e8d39840feea3f0643cab8eba29db9b3&plugin=AMap.Geocoder,AMap.Autocomplete,AMap.PlaceSearch"></script>
+    <script src="//webapi.amap.com/ui/1.0/main.js?v=1.0.11"></script>
 </head>
 <body>
     <div id="root">
