--- a/payWay.html
+++ b/payWay.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width,user-scalable=no,minimum-scale=1.0, maximum-scale=1.0, user-scalable=no,initial-scale=1"/>
     <meta name="Liudq" content="Administrator"/>
     <meta name="apple-mobile-web-app-capable" content="yes"/>
-    <script src="jquery-1.11.3.min.js"></script>
+    <script src="./jquery-1.11.3.min.js"></script>
+    <script src="./src/Util/md5.js"></script>
     <link rel="stylesheet" href="src/css/payWayStyle.css">
-    <title>Title</title>
+    <title>支付</title>
 </head>
 <body>
     <div class="wrap">
@@ -56,66 +57,75 @@
         if(r!=null)return  unescape(r[2]); return null;
     }
     var code = GetQueryString('code');
-    var url = document.location.href;
+    var url = encodeURIComponent(document.location.href);
     if(!code){
         window.location.href = "https://open.weixin.qq.com/connect/oauth2/authorize?appid=wxb405694f0dbfe6df&redirect_uri="+url+"&response_type=code&scope=snsapi_base&state=1#wechat_redirect";
     }else{
         code = GetQueryString('code');
         (function pay(){
-            var data = {
-                payChannel:"WeixinJSPay",
-                orderId:localStorage.orderId,
-                accessInfo:{
-                    access_secret:localStorage.access_secret,
-                    access_token:localStorage.access_token,
-                    app_key:"b5958b665e0b4d8cae77d28e1ad3f521"
-                }
-            };
-
             $.ajax({
                 type:"POST",
-                url:"http://www.huipay.com/huibeiwater/client/pay/confirm",
-                data:data,
+                url:"http://huipay.com/huibeiwater/user/weixinInfo",
+                data:JSON.stringify({code:code}),
                 contentType:'application/json; charset=utf-8',
                 async:false,
-            }).done((data)=>{
-                console.log("重定向成功，获取支付信息：",data);
-                function onBridgeReady(){
-                    WeixinJSBridge.invoke(
-                        'getBrandWCPayRequest', {
-                            "appId" : data.wexinSpec.appid,                                 //  公众号名称，由商户传入
-                            "timeStamp":data.wexinSpec.timestamp,                           //  时间戳，自1970年以来的秒数
-                            "nonceStr" : data.wexinSpec.noncestr,                           //  随机串
-                            "package" : data.wexinSpec.packageValue,
-                            "signType" : "MD5",                                             //  微信签名方式：
-                            "paySign" : data.wexinSpec.sign                                 //  微信签名
-                        },
-                        function(res){
-                            if(res.err_msg == "get_brand_wcpay_request:ok" ) {              //  使用以上方式判断前端返回,微信团队郑重提示：res.err_msg将在用户支付成功后返回    ok，但并不保证它绝对可靠。
-//                                var path = "pay/query";
-//
-//                                payPost.postData(queryOrderData.getData(),path).success(function(data){
-//                                    var data = JSON.stringify(data);
-//                                    window.location.href= "06-main.html";
-//                                }).error(function(errData){
-//                                    var errData = JSON.stringify(errData);
-//                                });
-                                window.location.href = "http://huipay.com/huibeiwater/huipayWaterClientWap/index.html?shopId="+localStorage.shopId;
-                            }
-                        }
-                    )
-                }
-                if (typeof WeixinJSBridge == "undefined"){
-                    if( document.addEventListener ){
-                        document.addEventListener('WeixinJSBridgeReady', onBridgeReady, false);
-                    }else if (document.attachEvent){
-                        document.attachEvent('WeixinJSBridgeReady', onBridgeReady);
-                        document.attachEvent('onWeixinJSBridgeReady', onBridgeReady);
+            }).done((info)=>{
+                var data = {
+                    payChannel:"WeixinJSPay",
+                    orderId:localStorage.orderId,
+                    openId:info.openId,
+                    accessInfo:{
+                        access_secret:localStorage.access_secret,
+                        access_token:localStorage.access_token,
+                        app_key:"b5958b665e0b4d8cae77d28e1ad3f521"
                     }
-                }else{
-                    onBridgeReady();
-                }
+                };
+                console.log(data);
+                $.ajax({
+                    type:"POST",
+                    url:"http://huipay.com/huibeiwater/client/pay/confirm",
+                    data:JSON.stringify(data),
+                    contentType:'application/json; charset=utf-8',
+                    async:false,
+                }).done((data)=>{
+                    function onBridgeReady(){
+                        var sign = "appId="+data.wexinSpec.appid+"&nonceStr="+data.wexinSpec.noncestr+
+                            "&package=prepay_id="+data.wexinSpec.prepay_id+"&signType=MD5&timeStamp="+
+                            data.wexinSpec.timestamp+"&key=9LhHxg6qg29YHCp3TnL6Qvl6jfprZh2q";
+                        var paySign = hex_md5(sign).toUpperCase();
+                        console.log(paySign);
+                        WeixinJSBridge.invoke(
+                            'getBrandWCPayRequest', {
+                                "appId" : data.wexinSpec.appid,                                 //  公众号名称，由商户传入
+                                "timeStamp":data.wexinSpec.timestamp,                           //  时间戳，自1970年以来的秒数
+                                "nonceStr" : data.wexinSpec.noncestr,                           //  随机串
+                                "package" : "prepay_id="+data.wexinSpec.prepay_id,
+                                "signType" : "MD5",                                             //  微信签名方式：
+                                "paySign" : paySign                                             //  微信签名
+                            },
+                            function(res){
+                                console.log(res.err_msg);
+                                if(res.err_msg == "get_brand_wcpay_request:ok" ) {              //  使用以上方式判断前端返回,微信团队郑重提示：res.err_msg将在用户支付成功后返回    ok，但并不保证它绝对可靠。
+                                    window.location.href = "http://huipay.com/huibeiwater/huipayWaterClientWap/index.html?shopId="+localStorage.shopId;
+                                }else{
+                                    window.location.href = "http://huipay.com/huibeiwater/huipayWaterClientWap/index.html?shopId="+localStorage.shopId;
+                                }
+                            }
+                        )
+                    }
+                    if (typeof WeixinJSBridge == "undefined"){
+                        if( document.addEventListener ){
+                            document.addEventListener('WeixinJSBridgeReady', onBridgeReady, false);
+                        }else if (document.attachEvent){
+                            document.attachEvent('WeixinJSBridgeReady', onBridgeReady);
+                            document.attachEvent('onWeixinJSBridgeReady', onBridgeReady);
+                        }
+                    }else{
+                        onBridgeReady();
+                    }
+                });
             });
+
         })();
     }
 
